{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 41,
  "lineage": "e476bbdd-b47f-aba4-1783-c55823234f54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:863518411655:instance/i-04cbb849bb76d474e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cbb849bb76d474e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "naveen",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06763e8d93dc99518",
            "private_dns": "ip-10-60-1-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.1.5",
            "public_dns": "ec2-98-81-78-116.compute-1.amazonaws.com",
            "public_ip": "98.81.78.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e0c47e63ed657b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e1123d1ee95f034",
            "tags": {
              "Name": "naveen-public-server"
            },
            "tags_all": {
              "Name": "naveen-public-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a288118e1bd1ba0"
            ]
          },
          "dependencies": [
            "aws_security_group.naveen-sg",
            "aws_subnet.publicsubnet1",
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bheem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863518411655:internet-gateway/igw-0fffc2f4eb800dee2",
            "id": "igw-0fffc2f4eb800dee2",
            "owner_id": "863518411655",
            "tags": {
              "Name": "navien-igw"
            },
            "tags_all": {
              "Name": "navien-igw"
            },
            "vpc_id": "vpc-06b7391d42475b125"
          },
          "dependencies": [
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "naveen-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863518411655:route-table/rtb-09d983e243aa0d27b",
            "id": "rtb-09d983e243aa0d27b",
            "owner_id": "863518411655",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fffc2f4eb800dee2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shankar-rt"
            },
            "tags_all": {
              "Name": "shankar-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b7391d42475b125"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bheem",
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0311b40b76f98cf03",
            "route_table_id": "rtb-09d983e243aa0d27b",
            "subnet_id": "subnet-03e1123d1ee95f034"
          },
          "dependencies": [
            "aws_internet_gateway.bheem",
            "aws_route_table.naveen-rt",
            "aws_subnet.publicsubnet1",
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06936a36d8d6c30d6",
            "route_table_id": "rtb-09d983e243aa0d27b",
            "subnet_id": "subnet-0c3df6c2d38df152e"
          },
          "dependencies": [
            "aws_internet_gateway.bheem",
            "aws_route_table.naveen-rt",
            "aws_subnet.publicsubnet2",
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbd193b5b2c5a5a5",
            "route_table_id": "rtb-09d983e243aa0d27b",
            "subnet_id": "subnet-0109fa1a1b88ced49"
          },
          "dependencies": [
            "aws_internet_gateway.bheem",
            "aws_route_table.naveen-rt",
            "aws_subnet.publicsubnet3",
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "naveen-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863518411655:security-group/sg-01a288118e1bd1ba0",
            "description": "allow all rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a288118e1bd1ba0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "naveen-sg",
            "name_prefix": "",
            "owner_id": "863518411655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "naveen-security"
            },
            "tags_all": {
              "Name": "naveen-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b7391d42475b125"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863518411655:subnet/subnet-03e1123d1ee95f034",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.60.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e1123d1ee95f034",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "863518411655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet1"
            },
            "tags_all": {
              "Name": "publicsubnet1"
            },
            "vpc_id": "vpc-06b7391d42475b125"
          },
          "dependencies": [
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863518411655:subnet/subnet-0c3df6c2d38df152e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.60.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3df6c2d38df152e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "863518411655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet2"
            },
            "tags_all": {
              "Name": "publicsubnet2"
            },
            "vpc_id": "vpc-06b7391d42475b125"
          },
          "dependencies": [
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863518411655:subnet/subnet-0109fa1a1b88ced49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.60.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109fa1a1b88ced49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "863518411655",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet3"
            },
            "tags_all": {
              "Name": "publicsubnet3"
            },
            "vpc_id": "vpc-06b7391d42475b125"
          },
          "dependencies": [
            "aws_vpc.naveen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "naveen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:863518411655:vpc/vpc-06b7391d42475b125",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.60.0.0/16",
            "default_network_acl_id": "acl-0c8a7e6c4416a442b",
            "default_route_table_id": "rtb-0c7fc2dc78543bdfd",
            "default_security_group_id": "sg-014e546aefb29b034",
            "dhcp_options_id": "dopt-0ebc9964579a2f85a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b7391d42475b125",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7fc2dc78543bdfd",
            "owner_id": "863518411655",
            "tags": {
              "Name": "navien-vpc"
            },
            "tags_all": {
              "Name": "navien-vpc"
            }
          }
        }
      ]
    }
  ]
}